--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "~3.0.0",
+    "compression": "~1.0.6",
     "less-middleware": "~0.1.15", 
     "jade": ">= 1.1.5",
 
