--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Balthasar Gracian's Art of Worldly Wisdom",
   "main": "server.js",
   "dependencies": {
+    "supertest": "~0.9.0",
     "express": "~3.0.0",
     "compression": "~1.0.6",
     "less-middleware": "~0.1.15", 
