Use non-cli version of grunt in npm scripts
Using the `grunt` command would mean we need to also install grunt-cli
which is unnecessary for the most part since we can just run the tasks
inline with `$ node -e`.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "test": "mocha",
-    "prestart": "grunt",
+    "prestart": "node -e \"require('grunt').tasks();\"",
     "start": "node web.js"
   },
   "engines": {
